make server side engine selectable